# ClearBag

./: .coverage  .dockerignore  .env.example  .env.local.example  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_V2.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY_FIX.md  SPECIFICATION.md  build_push.sh  debug_calendar.py  deploy.sh  deploy_dev.sh  deploy_v2.sh  docker-compose.yml  firebase.json  firestore.rules  main.py  main_v2.py  pyproject.toml  requirements.txt  test_adapters.py  test_terraform_config.sh  upload_sample_to_inbox.py
.claude/: settings.json
.github/workflows/: _lint-python.yml  _notify-slack.yml  _test-python.yml  auto-add-to-project.yml  cd-dev.yml  cd-prod-build.yml  cd-prod-terraform.yml  cd-prod.yml  ci-frontend.yml  ci.yml  deploy.yml  tf-cmt-dev.yml  tf-cmt-prod.yml
docs/: e2e-manual-test-checklist.md  e2e-manual-test-results-2026-03-03.md  looker-studio-queries.md  notification-expansion-options.md  operations-runbook.md  pwa-access-control.md  pwa-hosting-comparison.md
docs/plan/: analytics-platform.md  ci-python-v2.md  cloud-run-jobs-crash-fix-v2.md  commercialization-mvp.md  container-deploy-artifact-registry.md  fix-vertex-ai-iam-dev.md  github-actions-cd-dev.md  image-based-deploy-dev.md  prod-deploy-latest-tag-separation.md  prod-deploy.md  terraform-plan-ci.md
docs/review/: container-deploy-artifact-registry.md  fix-vertex-ai-iam-dev.md  image-based-deploy-dev.md  nonfunctional-analysis-2026-02-23.md  prod-deploy-latest-tag-separation.md  prod-deploy.md
examples/: abc_vs_protocol_test.py  hybrid_approach.py  protocol_example.py  protocol_vs_abc.py  real_world_tradeoff.py
frontend/: .env.local.example  README.md  next-pwa.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: account-deletion.spec.ts  activation.spec.ts  calendar.spec.ts  dashboard.spec.ts  family.spec.ts  invite.spec.ts  push-notification.spec.ts  register.spec.ts  share-target.spec.ts  smoke.spec.ts
frontend/public/: manifest.json  sw.js  worker-AZArw2JPD1HUpKNDmHaGm.js  worker-myvaHw5p5YFO4Kx2K149Q.js  worker-neAeheiSeS_QabK1tkj7U.js
frontend/scripts/: generate-icons.mjs
frontend/worker/: index.ts
school_ai_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: activate_existing_users.py  bootstrap_wif.sh  create_service_code.py  deactivate_user.py  manage_service_codes.py  migrate_to_families.py  reset_dev_data.py  setup_github_project.sh  test_firestore_rules.sh  verify_worker_auth.sh
src/: calendar_client.py  cloud_handler.py  config.py  core.py  drive_utils.py  gemini_client.py  list_calendars.py  main.py  slack_client.py  todoist_client.py
terraform/: .terraform.lock.hcl  TESTING.md  functions.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  variables.tf
terraform/environments/: dev.tfvars
terraform/tests/: terraform_validate_test.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_account_deletion.py  test_activation.py  test_events_tasks.py  test_family_flow.py  test_profile_crud.py  test_push_subscriptions.py  test_settings.py  test_v2_full_pipeline.py
tests/integration/: __init__.py  test_adapters_manual.py
tests/manual/: UPLOAD_VALIDATION_GUIDE.md  __init__.py  test_upload_validation.py
tests/unit/: test_account_deletion.py  test_action_dispatcher.py  test_analytics.py  test_api_auth.py  test_api_documents.py  test_api_families.py  test_api_tasks.py  test_cloud_storage.py  test_credentials.py  test_deactivate_user.py  test_document_processor.py  test_exception_handler.py  test_firestore_repository.py  test_gemini_extras_fixture.py  test_ical_renderer.py  test_logging_config.py  test_manage_service_codes.py  test_models.py  test_orchestrator.py  test_push_subscriptions.py  test_reset_dev_data.py  test_usage.py  test_webpush_notifier.py  test_worker_auth.py  test_worker_event_reminder.py  test_worker_morning_digest.py
v2/: CHANGELOG.md  PHASE3_GUIDE.md  README.md  __init__.py  analytics.py  config.py  logging_config.py
v2/adapters/: __init__.py  cloud_storage.py  cloud_tasks_queue.py  credentials.py  email_notifier.py  firestore_repository.py  gemini.py  google_calendar.py  google_drive.py  google_sheets.py  ical_renderer.py  slack.py  todoist.py  webpush_notifier.py
v2/domain/: __init__.py  errors.py  models.py  ports.py
v2/entrypoints/: __init__.py  cli.py  cloud_function.py  factory.py  worker.py
v2/services/: __init__.py  action_dispatcher.py  (+2 more)
(+114 files in other folders)
