[project]
name = "clearbag"
version = "0.1.0"
description = "学校配布物PDFをAIで解析しカレンダー・タスクに自動連携するサービス"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Google Cloud / AI ---
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "google-cloud-aiplatform>=1.129.0",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-storage>=2.20.0",
    "google-cloud-tasks>=2.20.0",
    # --- Firebase / Auth ---
    "firebase-admin>=6.0.0",
    # --- API サーバー ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # --- カレンダーフィード ---
    "icalendar>=6.0.0",
    # --- 通知 ---
    "sendgrid>=6.11.0",
    "pywebpush>=2.0.0",
    # --- リトライ ---
    "tenacity>=9.0.0",
    # --- PDF 解析 ---
    "pypdf>=4.0.0",
    # --- ユーティリティ ---
    "python-dotenv>=1.2.1",
    "slack-sdk>=3.39.0",
    "todoist-api-python>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "manual: 手動実行のみ（実際のAPI呼び出しを行う）",
    "e2e: E2Eテスト（Firestore Emulatorが必要: FIRESTORE_EMULATOR_HOST=localhost:8080）",
]

[tool.ruff]
target-version = "py313"
src = ["v2", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (Python 3.13向けモダン化)
    "B",    # flake8-bugbear (よくあるバグパターン)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # 行長はformatterが管理するため、linterでは除外
]

[tool.ruff.lint.per-file-ignores]
# FastAPI の Depends() は引数デフォルト値での使用が公式パターン (B008)
"v2/entrypoints/api/**" = ["B008"]
